apps/workflows/overlays/codefresh3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/protocol: https
    ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/backend-protocol: https
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  creationTimestamp: null
  name: codefresh3-workflows-ingress
  namespace: codefresh3
spec:
  ingressClassName: nginx
  rules:
  - host: ad4ec52f861704f18870692abd3beae5-2c2f77ca107721a8.elb.us-west-2.amazonaws.com
    http:
      paths:
      - backend:
          service:
            name: argo-server
            port:
              number: 2746
        path: /workflows(/|$)(.*)
        pathType: ImplementationSpecific
status:
  loadBalancer: {}
